Update project files

--- a/myadmin/templates/forgot_password.html
+++ b/myadmin/templates/forgot_password.html
@@ -53,6 +53,10 @@
     @media (max-width:780px){
       .page-wrap{padding:12px}
     }
+    * {
+      -webkit-tap-highlight-color: transparent !important;
+    }
+
   </style>
 </head>
 <body>
