--- a/student/templates/change_password.html
+++ b/student/templates/change_password.html
@@ -11,6 +11,10 @@
         href="https://fonts.googleapis.com/css2?display=swap&amp;family=Noto+Sans%3Awght%40400%3B500%3B700%3B900&amp;family=Public+Sans%3Awght%40400%3B500%3B700%3B900">
 
   <style>
+    * {
+      -webkit-tap-highlight-color: transparent !important;
+    }
+
     :root{
       --bg:#fff; --muted:#617589; --text:#111418; --border:#dbe0e6; --surface:#f0f2f4;
       --accent:#111418; --radius:12px; --pad-x:40px; --max-w:720px;
