--- a/student/templates/home.html
+++ b/student/templates/home.html
@@ -16,6 +16,10 @@
     <link rel="icon" type="image/x-icon" href="data:image/x-icon;base64," />
 
     <style>
+      * {
+        -webkit-tap-highlight-color: transparent !important;
+      }
+
       :root{
         --bg: #ffffff;
         --muted: #617589;
