--- a/student/templates/profile_edit.html
+++ b/student/templates/profile_edit.html
@@ -68,6 +68,10 @@
       .form-grid{grid-template-columns:1fr}
       .page-wrap{padding:12px}
     }
+    * {
+      -webkit-tap-highlight-color: transparent !important;
+    }
+
   </style>
 </head>
 <body>
