--- a/student/templates/student_register.html
+++ b/student/templates/student_register.html
@@ -66,6 +66,10 @@
       padding: 24px;
       box-shadow: 0 1px 4px rgba(0,0,0,0.05);
     }
+    *{
+      -webkit-tap-highlight-color: transparent !important;
+    }
+
 
 
     .form-grid {
