--- a/myadmin/templates/dashboard.html
+++ b/myadmin/templates/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hostel Admin Dashboard</title>
     <link rel="icon" type="image/png" href="/media/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin />
@@ -25,6 +25,9 @@
         --max-width: 1100px;
         --container-padding-x: 20px;
         font-family: "Public Sans", "Noto Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      }
+      * {
+        -webkit-tap-highlight-color: transparent !important;
       }
 
       *{box-sizing:border-box}
