--- a/student/templates/complaint_form.html
+++ b/student/templates/complaint_form.html
@@ -24,6 +24,10 @@
     padding:14px 14px;
   }
   }
+  * {
+    -webkit-tap-highlight-color: transparent !important;
+  }
+
 </style>
 <div style="padding:28px 12px; background:transparent">
   <main style="max-width:960px;margin:0 auto">
