--- a/student/templates/profile_view.html
+++ b/student/templates/profile_view.html
@@ -21,6 +21,10 @@
       --max-width: 960px;
       font-family: "Public Sans","Noto Sans", system-ui, -apple-system, "Segoe UI", Roboto, Arial;
     }
+    * {
+      -webkit-tap-highlight-color: transparent !important;
+    }
+
 
     *{box-sizing:border-box}
     html,body{height:100%;margin:0;background:var(--bg);color:var(--text);-webkit-font-smoothing:antialiased}
