Update project files

--- a/myadmin/templates/login.html
+++ b/myadmin/templates/login.html
@@ -262,8 +262,8 @@
 
         <div class="actions">
           <button type="submit" class="btn btn-primary">Login</button>
-          <!-- <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a> -->
           <a href="{% url 'student_register' %}" class="btn btn-register">Create Account</a>
+          <a href="{% url 'home' %}" class="btn btn-secondary">Cancel</a>
         </div>
       </form>
 
