--- a/student/templates/home.html
+++ b/student/templates/home.html
@@ -481,7 +481,7 @@
                 
                 </svg>
             </div>
-            <h2>Hostel Portal</h2>
+            <h2>SmartHostel</h2>
           </div>
           <nav class="desktop-nav">
             <div class="links" role="navigation" aria-label="main navigation" style=" display:contents">
